--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,7 +6,7 @@ en:
   w_title: "Women"
   k_title: "Kids"
   f_title: "Fashion Combo Goggles"
-  c_title: "Classic Combo Goggles"
+  c_title: "Classic Comb Goggles"
   s_title: "Sun Combo Goggles"
   login: "Login"
   register: "Register"
