--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,8 +8,6 @@ en:
   f_title: "Fashion Combo Goggles"
   c_title: "Classic Combo Goggles"
   s_title: "Sun Combo Goggles"
-  login: "Login"
-  register: "Register"
   contact: "contact"
   new: "NEW"
   card:  "Empty Cart"
@@ -20,5 +18,19 @@ en:
   view: "Quick View"
   name_product: "Aenean placerat"
   price: "$40"
-  email: "huucc222@gmail.com"
   phone: "01203 566 278"
+  login_invalid: "Invalid Email/Password"
+  save_change: "Save Change"
+  edit_user: "Edit User"
+  log_in : "Login"
+  log_out: "Logout"
+  error: "Error"
+  name: "Name"
+  email: "Email"
+  not_found: "User's Not Found"
+  the_form_contains: "The form contains"
+  register_success : "Register Succeed"
+  new_user: "New User ?"
+  update_profile: "Update Your Profile"
+  profile: "Profile"
+  settings: "Settings"
